--- a/src/app/components/evaluacion/evaluacion.component.html
+++ b/src/app/components/evaluacion/evaluacion.component.html
@@ -209,27 +209,27 @@
     </div>
     <div class="input-group">
         <span class="input-group-text">Condición</span>
-        <textarea class="form-control" formControlName="condicion" #condicion  aria-label="With textarea"></textarea>
+        <textarea class="form-control" formControlName="condicion" #condicion placeholder="Redacte que fue lo que se encontro."  aria-label="With textarea"></textarea>
       </div>
     <br />
     <div class="input-group">
         <span class="input-group-text">Criterio</span>
-        <textarea class="form-control" formControlName="criterio" #criterio aria-label="With textarea"></textarea>
+        <textarea class="form-control" formControlName="criterio" placeholder="Redacte en base a que regulación, norma, politica, etc. Se baso para redactar algun hallazgo." #criterio aria-label="With textarea"></textarea>
       </div>
     <br />
     <div class="input-group">
         <span class="input-group-text">Causa</span>
-        <textarea class="form-control" formControlName="causa" #causa aria-label="With textarea"></textarea>
+        <textarea class="form-control" formControlName="causa" placeholder="Redacte que aspectos, eventos, o contexto por lo que esta ocurriendo" #causa aria-label="With textarea"></textarea>
       </div>
     <br />
     <div class="input-group">
         <span class="input-group-text">Efecto</span>
-        <textarea class="form-control" formControlName="efecto" #efecto aria-label="With textarea"></textarea>
+        <textarea class="form-control" formControlName="efecto" placeholder="Redacte que es lo que ocasiona en la empresa." #efecto aria-label="With textarea"></textarea>
       </div>
     <br />
     <div class="input-group">
         <span class="input-group-text">Conclusión</span>
-        <textarea class="form-control" formControlName="conclusion" #conclusion aria-label="With textarea"></textarea>
+        <textarea class="form-control" formControlName="conclusion" placeholder="Una conclusión general del hallazgo." #conclusion aria-label="With textarea"></textarea>
       </div>
     </form>
     <br />
